--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        google()
         jcenter()
         mavenCentral()
     }
@@ -10,16 +11,18 @@ buildscript {
     }
 }
 
-/*allprojects {
-    repositories {
-        jcenter()
-    }
-}*/
-
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.1.2' apply false
     id 'com.android.library' version '7.1.2' apply false
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        jcenter()
+    }
 }
 
 task clean(type: Delete) {
