--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,20 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.1'
     implementation 'com.google.firebase:firebase-firestore:23.0.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+    implementation 'androidx.core:core-splashscreen:1.0.0-beta02'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'co.dift.ui.swipetoaction:library:1.1'
+
+    //ROOM
+    def room_version = "2.4.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    //SQLite
+    def SQLite_version = "2.2.0"
+    implementation "androidx.room:room-runtime:$SQLite_version"
+    annotationProcessor "androidx.room:room-compiler:$SQLite_version"
+
 }
