--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'co.dift.ui.swipetoaction:library:1.1'
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    annotationProcessor "androidx.lifecycle:lifecycle-compiler:2.4.1"
 
     //ROOM
     def room_version = "2.4.2"
@@ -56,5 +58,9 @@ dependencies {
     def SQLite_version = "2.2.0"
     implementation "androidx.room:room-runtime:$SQLite_version"
     annotationProcessor "androidx.room:room-compiler:$SQLite_version"
+
+    //Firebase AUTH
+    //implementation 'com.google.firebase:firebase-auth'
+    //implementation 'com.google.android.gms:play-services-auth:20.1.0'
 
 }
