--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.news.newsapp">
+    package="com.news.newsapp" >
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission> // dosya yazma
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission> // dosya okuma
 
     <application
         android:allowBackup="true"
@@ -8,13 +11,27 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewsApp">
+        android:theme="@style/Theme.NewsApp" >
+        <activity
+            android:name=".views.FileAddActivity"
+            android:exported="false"
+            android:label="@string/title_activity_file_add"
+            android:theme="@style/Theme.NewsApp.NoActionBar" />
+        <activity
+            android:name=".views.NewsUpdateActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.DetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".views.NavigationActivity"
+            android:exported="false" />
         <activity
             android:name=".views.NewsListActivity"
             android:exported="false" />
         <activity
             android:name=".views.MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
