--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.news.newsapp" >
+    package="com.news.newsapp">
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission> // dosya yazma
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission> // dosya okuma
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NewsApp" >
+        android:theme="@style/Theme.NewsApp">
+        <activity
+            android:name=".views.FileListActivity"
+            android:exported="false" />
         <activity
             android:name=".views.FileAddActivity"
             android:exported="false"
@@ -31,7 +34,7 @@
             android:exported="false" />
         <activity
             android:name=".views.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
