--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/news_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/news_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NewsApp" >
         <activity
@@ -36,9 +36,6 @@
             android:exported="false"
             android:label="@string/title_activity_file_add"
             android:theme="@style/Theme.NewsApp.NoActionBar" />
-        <activity
-            android:name=".views.NewsUpdateActivity"
-            android:exported="false" />
         <activity
             android:name=".views.DetailActivity"
             android:exported="false" />
